--- a/index.html
+++ b/index.html
@@ -222,7 +222,6 @@
             <h2>Contact</h2>
             <div class="contact-info">
                 <p>📍 Villupuram, Tamil Nadu</p>
-                <p>📞 +91 81480 51597</p>
                 <p>📧 <a href="mailto:savithakavina@gmail.com">savithakavina@gmail.com</a></p>
                 <p>🔗 <a href="https://www.linkedin.com/in/savitha-l" target="_blank">LinkedIn</a></p>
                 <p>💻 <a href="https://github.com/savitha-analytics" target="_blank">GitHub</a></p>
@@ -265,8 +264,8 @@
             }
 
             const link = document.createElement("a");
-            link.href = "Savitha_Resume.pdf";
-            link.download = "Savitha_Resume.pdf";
+            link.href = "Savitha_resume.pdf";
+            link.download = "Savitha_resume.pdf";
             link.click();
 
             closeForm();
@@ -275,4 +274,6 @@
 
 </body>
 </html>
+
+
 
